# stripe-api-gen

./: LICENSE  stripe-api-gen.cabal
lib/: HaddockTest.hs
src/: Extra.hs  Main.hs  Pretty.hs
static/: stripe-core.cabal
static/Web/Stripe/: OneOf.hs  StripeRequest.hs
static/src/Web/Stripe/: AnyOf.hs  OneOf.hs  StripeRequest.hs  Types.hs
