cabal-version:       2.4
name:                stripe-api-gen
version:             0.1.0.0
synopsis:            Generate bindings to the stripe API
description:         Using the OpenAPI-3 specification, automatically generate bindings to the stripe.com API.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Web
extra-source-files:  CHANGELOG.md

library
  build-depends:       aeson,
                       base >=4.12.0.0,
                       bytestring,
                       casing,
                       containers,
                       directory,
                       filepath,
                       ghc,
                       GenericPretty,
                       ghc-paths,
                       ghc-source-gen,
                       insert-ordered-containers,
                       openapi3,
                       ormolu,
                       pretty,
                       template-haskell,
                       text,
                       witherable
  hs-source-dirs:      lib
  default-language:    Haskell2010
  exposed-modules:     HaddockTest

executable stripe-api-gen
  main-is:             Main.hs
  other-modules:       Extra
  build-depends:       aeson,
                       base >=4.12.0.0,
                       bytestring,
                       casing,
                       containers,
                       directory,
                       filepath,
                       ghc,
                       ghc-paths,
                       ghc-source-gen,
                       GenericPretty,
                       insert-ordered-containers,
                       openapi3,
                       ormolu,
                       pretty,
                       stripe-api-gen,
                       template-haskell,
                       text,
                       witherable
  hs-source-dirs:      src
  default-language:    Haskell2010
