name:                stripe-core
version:             3.0
synopsis:            Stripe API for Haskell - Pure Core
license:             MIT
license-file:        LICENSE
author:              David Johnson, Jeremy Shaw
maintainer:          djohnson.m@gmail.com
copyright:           Copyright (c) 2016 David M. Johnson, Jeremy Shaw
homepage:            https://github.com/dmjio/stripe-haskell
bug-reports:         https://github.com/dmjio/stripe-haskell/issues
category:            Web
build-type:          Simple
cabal-version:       >=1.10
Description:
    .
    <<https://stripe.com/img/navigation/logo@2x.png>>
    .
    [Pure API Wrapper]
    `stripe-core` provides a complete binding to the Stripe API. `stripe-core` provides pure wrappers around all the Stripe API objects and methods. `stripe-core` is pure and is not tied to any particular HTTP client library. End users will typically install the `stripe-haskell` package which pulls in the `stripe-http-client` library to obtain a complete set of functionality.


source-repository head
  type:     git
  subdir:   stripe-core
  location: git://github.com/dmjio/stripe-haskell.git

library
  hs-source-dirs:      src
  ghc-options:        -Wall -fno-warn-deprecated-flags -fno-warn-unused-imports
  build-depends:       aeson                >= 0.8 && < 0.10 || >= 0.11 && < 2.2
                     , base                 >= 4.7   && < 5
                     , bytestring           >= 0.10  && < 0.12
                     , containers
                     , mtl                  >= 2.1.2 && < 2.4
                     , text                 >= 1.0   && < 2.1
                     , time                 >= 1.4   && < 1.14
                     , transformers         >= 0.3   && < 0.7
                     , unordered-containers >= 0.2.5 && < 0.4

  default-language:    Haskell2010
  exposed-modules:
                       Web.Stripe.Client
                       Web.Stripe.Error
                       Web.Stripe.StripeRequest
                       Web.Stripe.CustomersPost
                       Web.Stripe.CustomersGet
                       Web.Stripe.PlansPost
                       Web.Stripe.PlansPost.Expand
                       Web.Stripe.PlansPost.Tiers
                       Web.Stripe.PlansPost.TransformUsage
                       Web.Stripe.PlansGet
                       Web.Stripe.SubscriptionsPost
                       Web.Stripe.SubscriptionsPost.AddInvoiceItems
                       Web.Stripe.SubscriptionsPost.AutomaticTax
                       Web.Stripe.SubscriptionsPost.Expand
                       Web.Stripe.SubscriptionsPost.Items
                       Web.Stripe.SubscriptionsPost.PaymentSettings
                       Web.Stripe.SubscriptionsPost.TransferData
                       Web.Stripe.SubscriptionsPost.TrialSettings
                       Web.Stripe.SubscriptionsGet
                       Web.Stripe.OneOf
                       Web.Stripe.Types
                       Web.Stripe.Util
